--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-    <div class="navbar-wrapper navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top navbar-fixed-top">
       <div class="container">
 
         <nav class="navbar navbar-inverse navbar-static-top">
