Finalized layout and styles. Established Sticky header. Reverted to normal footer. Added headline font.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="//use.edgefonts.net/pt-sans;gudea:n4,i4,n7:all.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,9 +16,8 @@
      <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-       <!-- Custom styles for this template -->
-    <!-- <link href="css/carousel.css" rel="stylesheet"> -->
-    <link href="css/carousel1.css" rel="stylesheet">
+    <!-- Custom styles for this page -->
+    <link href="css/custom.css" rel="stylesheet">
  
     </head>
 <!-- NAVBAR
@@ -119,10 +119,9 @@
 
       <div class="row featurette">
         <div class="col-md-12 col-centered">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted"><br>It'll blow your mind.</span></h2>
+          <h2 class="featurette-heading">Article Title <span class="text-muted"><br>article Sub-title</span></h2>
           <p class="pull-left" class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
-        
 
       <hr class="featurette-divider col-md-7 col-centered">
 
@@ -130,9 +129,9 @@
 
 
       <!-- FOOTER -->
-      <footer class="col-md-7 col-centered">
-        <p class="pull-left"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <footer class="footer col-md-7 col-centered ">
+        <p class="pull-left"><a href="#">Back to top </a></p>
+        <p> | &copy; 2015 Matthew NK Photography</p>
       </footer>
 
     </div><!-- /.container -->
@@ -147,7 +146,5 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
    
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
