Created gallery feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>Matthew NK Film Set Photography</title>
 
@@ -16,7 +15,7 @@
      <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-    <!-- Custom styles for this page -->
+    <!-- Custom styles for this site -->
     <link href="css/custom.css" rel="stylesheet">
  
     </head>
@@ -35,18 +34,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Nav Bar</a>
+              <a class="navbar-brand" href="#">Matthew NK Film Set Photography</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Galleries <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li class="dropdown-header">Feature Films</li>
-                    <li><a href="#">Lost Division</a></li>
+                    <li><a href="gallery1.html">Lost Division</a></li>
                     <li><a href="#">How The Fire Fell</a></li>
                   </ul>
                 </li>
