added remaining pages

--- a/about.html
+++ b/about.html
@@ -68,37 +68,9 @@
 
       <div class="row featurette">
         <div class="col-md-12 col-centered">
-          <h2 class="featurette-heading">Lost Division<span class="text-muted"><br>A feature film directed by Edward P. Davee</span></h2>
+          <h2 class="featurette-heading">Matthew N. King Photography<span class="text-muted"><br>About</span></h2>
           <p class="pull-left" class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
-
-    <!-- Gallery (based on a tutorial @ http://fearlessflyer.com/create-a-responsive-photo-gallery-with-bootstrap-framework/
-    ================================================== -->
-    <div class="container">
-    	<ul class="row">
-    		<li class="col-sm-3 col-xs-6"><img src="img/lostDivision-025.JPG"></li>
-    		<li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
-    		<li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
-    		<li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
-    		<li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
-    		<li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
-        <li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
-        <li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
-    	</ul>
-    </div>
-
-    <!-- Modal Light box -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    	<div class="modal-dialog">
-    		<div class="modal-content">
-    			<div class="modal-body">    				
-    			</div>
-    		</div><!-- /.modal-content -->
-    	</div><!-- /.modal-dialog -->
-    </div>
-    
-    <!-- End of the Gallery
-    ================================================== -->
  
       <!-- FOOTER -->
       <footer class="footer col-md-7 col-centered ">
