--- a/gallery2.html
+++ b/gallery2.html
@@ -68,7 +68,7 @@
 
       <div class="row featurette">
         <div class="col-md-12 col-centered">
-          <h2 class="featurette-heading">Lost Division<span class="text-muted"><br>A feature film directed by Edward P. Davee</span></h2>
+          <h2 class="featurette-heading">How The Fire Fell<span class="text-muted"></span></h2>
           <p class="pull-left" class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
 
@@ -76,7 +76,7 @@
     ================================================== -->
     <div class="container">
     	<ul class="row">
-    		<li class="col-sm-3 col-xs-6"><img src="img/lostDivision-025.JPG"></li>
+    		<li class="col-sm-3 col-xs-6"><img src="img/htff-1.jpg"></li>
     		<li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
     		<li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
     		<li class="col-sm-3 col-xs-6"><img src="http://placehold.it/150/ccc"></li>
