--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Galleries <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
                     <li class="dropdown-header">Feature Films</li>
                     <li><a href="gallery1.html">Lost Division</a></li>
-                    <li><a href="#">How The Fire Fell</a></li>
+                    <li><a href="gallery2.html">How The Fire Fell</a></li>
                   </ul>
                 </li>
               </ul>
