--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="//use.edgefonts.net/pt-sans;gudea:n4,i4,n7:all.js"></script>
+    <script src="http://use.edgefonts.net/pt-sans;gudea:n4,i4,n7:all.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A portfolio of film set photography by Matthew King">
+    <meta name="author" content="Matthew King">
 
     <title>Matthew NK Film Set Photography</title>
 
+    <!-- script links for bootstrap -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <script src="js/gallery.js"></script>
+
+    <!-- script link for mailchimp form -->
+    <script type='text/javascript' src='http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 
      <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -23,6 +27,9 @@
 
     <!-- Custom styles for this site -->
     <link href="css/custom.css" rel="stylesheet">
+
+    <!-- Styles for mailchimp form -->
+    <link href="http://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
  
     </head>
 <!-- NAVBAR
@@ -30,7 +37,6 @@
   <body>
     <div class="navbar navbar-default navbar-fixed-top navbar-fixed-top">
       <div class="container">
-
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
@@ -44,9 +50,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Galleries <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
@@ -63,14 +69,47 @@
     </div>
 
     <div class="container marketing">
-
       <!-- Page title and paragraph -->
-
       <div class="row featurette">
         <div class="col-md-12 col-centered">
-          <h2 class="featurette-heading">Matthew N. King Photography<span class="text-muted"><br>Contact</span></h2>
-          <p class="pull-left" class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Contact<span class="text-muted"><br>
+            <ul>
+              <li>Email: <a href="mailto:mrmatthew.nk@gmail.com">mrmatthew.nk@gmail.com</a></li>
+              <li>Phone: <a href="tel:503 381 2087">(503)381-2087</a></li>
+            </ul></span>
+          </h2>
         </div>
+      </div>
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+        <form action="//matthewnkphotography.us10.list-manage.com/subscribe/post?u=f6ed251928e5ea918d0c71897&amp;id=8f87432117" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+            <h2>Subscribe to our mailing list</h2>
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group">
+              <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+              </label>
+              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            <div class="mc-field-group">
+              <label for="mce-FNAME">First Name </label>
+              <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+            </div>
+            <div class="mc-field-group">
+              <label for="mce-LNAME">Last Name </label>
+              <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;"><input type="text" name="b_f6ed251928e5ea918d0c71897_8f87432117" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+        </form>
+      </div>
+      <!--End mc_embed_signup-->
  
       <!-- FOOTER -->
       <footer class="footer col-md-7 col-centered ">
@@ -81,10 +120,22 @@
     </div><!-- /.container -->
 
 
-    <!-- Bootstrap core JavaScript
+    <!-- JavaScript
     ================================================== -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    
+    <!-- google analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62187521-1', 'auto');
+      ga('send', 'pageview');
+    </script>
    
   </body>
 </html>
