--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="//use.edgefonts.net/pt-sans;gudea:n4,i4,n7:all.js"></script>
+    <script src="http://use.edgefonts.net/pt-sans;gudea:n4,i4,n7:all.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A portfolio of film set photography by Matthew King">
+    <meta name="author" content="Matthew King">
 
     <title>Matthew NK Film Set Photography</title>
 
@@ -68,7 +68,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/htff-1.jpg" alt="First slide">
+          <img class="first-slide" src="img/htff-1.jpg" alt="Director Edward P. Davee">
           <div class="container">
             <!-- <div class="carousel-caption">
               <h1>Example headline.</h1>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="img/lostDivision-025.JPG" alt="Second slide">
+          <img class="second-slide" src="img/lostDivision-025.JPG" alt="Actor Dicky Dahl">
           <div class="container">
             <!-- <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="img/sballard_01.jpg" alt="Third slide">
+          <img class="third-slide" src="img/sballard_01.jpg" alt="DP Scott Ballard">
           <div class="container">
             <!-- <div class="carousel-caption">
               <h1>One more for good measure.</h1>
@@ -118,7 +118,7 @@
 
       <div class="row featurette">
         <div class="col-md-12 col-centered">
-          <h2 class="featurette-heading">Article Title <span class="text-muted"><br>article Sub-title</span></h2>
+          <h2 class="featurette-heading">Film Set Photography<span class="text-muted"><br>article sub-title</span></h2>
           <p class="pull-left" class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
 
@@ -144,6 +144,17 @@
     
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- google analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62187521-1', 'auto');
+      ga('send', 'pageview');
+    </script>
    
   </body>
 </html>
