--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 
       <div class="row featurette">
         <div class="col-md-12 col-centered">
-          <h2 class="featurette-heading">Matthew N. King Photography<span class="text-muted"><br>About</span></h2>
+          <h2 class="featurette-heading">About<span class="text-muted"><br></span></h2>
           <p class="pull-left" class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
  
@@ -86,7 +86,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
-    
+
     <!-- google analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
