--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
       <div id="mc_embed_signup">
         <form action="//matthewnkphotography.us10.list-manage.com/subscribe/post?u=f6ed251928e5ea918d0c71897&amp;id=8f87432117" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
-            <h2>Subscribe to our mailing list</h2>
+            <h2>Subscribe to my mailing list</h2>
             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
             <div class="mc-field-group">
               <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
@@ -125,7 +125,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 
-    
+
     <!-- google analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
